# object-store-connector

./: .gitignore  README.md  metadata.json  pom.xml  pyproject.toml  ui-config copy.json  ui-config.json
.github/workflows/: build.yml  release.yml
object_store_connector/: connector.py
object_store_connector/config/: config.yaml
object_store_connector/models/: object_info.py
object_store_connector/provider/: azure.py  blob_provider.py  gcs.py  s3.py
scripts/: build_dist.py
tests/: batch_setup.py  test_azure.py  test_gcs.py  test_s3.py
tests/config/: config.template.yaml
tests/test_data/: chunk-1.json
