[tool.poetry]
name = "object-store-connector"
version = "0.1.1"
description = "Object Store Connector"
authors = ["Ravi Mula <ravismula@users.noreply.github.com>"]
readme = "README.md"

packages = [
    { include = "object_store_connector", from = ".", format = "sdist" },
]

include = [
    "requirements.txt",
    "libs/*.jar",
    "ui-config.json",
    "metadata.json",
    "alerts.yaml",
    "metrics.yaml",
    "s3.svg",
    "azure.svg",
    "gcs.svg"
]

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob= "^12.20.0"
boto3 = "1.34.82"
google-cloud-storage = "^2.16.0"
obsrv = {version = "0.1.4", extras = ["batch"]}
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.0"
minio = "^7.2.15"
pytest = "^8.1.1"
testcontainers-minio = "^0.0.1rc1"
testcontainers-azurite = "^0.0.1rc1"
testcontainers-kafka = "^0.0.1rc1"
testcontainers-postgres = "^0.0.1rc1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
package = "scripts.build_dist:main"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"